--- a/paper/mainpaper.tex
+++ b/paper/mainpaper.tex
@@ -364,14 +364,10 @@ the sample would be reclassified as a grade 1 tumor, while a positive
 value would indicate a grade 3 tumor. Graph C shows all samples reclassified using the GGI.
 In our analysis, we chose a different re-classification technique. 
 This was described above as the nearest-centroid method. We reclassified 
-each grade 2 sample to either grade 1 or 3 to produce the graph in Figure \ref{3S}.
-\begin{wrapfigure}{r}{0.54\textwidth}
-%\begin{figure}
-\centering
-\includegraphics[scale=0.40]{docs/Figure3S}
-\caption{Reclassification of grade 2 samples using nearest-centroid method.}\label{3S}
-%\end{figure}
-\end{wrapfigure}
+each grade 2 sample to either grade 1 or 3 to produce the graph in Figure \ref{3S}.\\
+
+
+
 Using Figure \ref{3S} we were able to see a difference between our re-graded curve 
 and the original. Our reclassification actually intensified the gap between the grade 1 and 3 curves.
 Figure \ref{4S} shows the integration of grade 2 reclassifications in Figure  \ref{3S} with 
@@ -380,21 +376,29 @@ Figure  \ref{4S} includes all of the original grade 1 samples and grade 2 sample
 that were classified as “1-like”, while the grade 3 curve contains the original
  grade 3 samples and the grade 2 samples that were classified as “3-like”. 
 The graph is analogous to the Sotiriou analysis shown in Figure \ref{4S}-C.
- \begin{wrapfigure}{r}{0.64\textwidth}
+\begin{figure}
 %\begin{figure}
 \centering
-\includegraphics[scale=0.38]{docs/Figure4S}
-\caption{All samples reclassified using the nearest-centroid method.}\label{4S}
+\includegraphics[scale=.55]{docs/Figure3S}
+\caption{Reclassification of grade 2 samples using nearest-centroid method.}\label{3S}
 %\end{figure}
-\end{wrapfigure}
+\end{figure}
+
+ %\begin{wrapfigure}{r}{1\textwidth}
+\begin{figure}
+\centering
+\includegraphics[scale=0.70]{docs/Figure4S}
+\caption{All samples reclassified using the nearest-centroid method.}\label{4S}
+\end{figure}
+%\end{wrapfigure}
 For a sort of control, we thought it might be interesting to run a similar 
 analysis using the PAM50 geneset, a list of genes known to be differentially
  expressed across breast cancer tumor subtypes. The reclassification using 
 the PAM50 genes (and nearest-centroid) is shown in the KM curve in Figure \ref{5S}.
- \begin{wrapfigure}{r}{0.64\textwidth}
+ \begin{wrapfigure}{r}{0.60\textwidth}
 %\begin{figure}
 \centering
-\includegraphics[scale=0.38]{docs/Figure5S}
+\includegraphics[scale=0.505]{docs/Figure5S}
 \caption{All samples reclassified using PAM50 genes.}\label{5S}
 %\end{figure}
 \end{wrapfigure}
@@ -408,10 +412,10 @@ The ER negative samples tended to have worse prognosis than ER positive samples 
 the difference did not reach statistical significance. This trend is consistent with literature 
 evidence that ER negative tumors are more malignant.  
 
- \begin{wrapfigure}{r}{0.64\textwidth}
+ \begin{wrapfigure}{r}{0.70\textwidth}
 %\begin{figure}
 \centering
-\includegraphics[scale=0.38]{docs/Figure5S}
+\includegraphics[scale=0.70]{docs/Figure5S}
 \caption{ KM curve of relapse free survival over time in ER positive versus ER negative samples.}\label{1B}
 %\end{figure}
 \end{wrapfigure}
@@ -420,10 +424,10 @@ Histologic grades 2 and 3 were associated with worse prognosis with regard to re
 free survival than grade 1 (Figure \ref{2B}).  Interestingly, there was no observed difference 
 between grade 2 and 3 tumors.  
 
- \begin{wrapfigure}{r}{0.64\textwidth}
+ \begin{wrapfigure}{r}{0.6\textwidth}
 %\begin{figure}
 \centering
-\includegraphics[scale=0.38]{docs/Figure2B}
+\includegraphics[scale=0.51]{docs/Figure2B}
 \caption{ KM curve of relapse free survival over time in groups based on histologic grades.}\label{2B}
 %\end{figure}
 \end{wrapfigure}
@@ -482,7 +486,7 @@ with significantly lower risk of disease relapse.  Figure \ref{4B} depicts the K
 centroid-based reclassification of only grade 2 tumor samples in the KJ125 set and 
 also demonstrates better prognosis for those samples reclassified as grade 1-like.  
 
- \begin{wrapfigure}{r}{0.64\textwidth}
+ \begin{wrapfigure}{r}{1.\textwidth}
 %\begin{figure}
 \centering
 \includegraphics[scale=0.38]{docs/Figure3B}
@@ -496,7 +500,7 @@ microarray gene expression profiles.}\label{3B}
  \begin{wrapfigure}{r}{0.64\textwidth}
 %\begin{figure}
 \centering
-\includegraphics[scale=0.38]{docs/Figure4B}
+\includegraphics[scale=0.40]{docs/Figure4B}
 \caption{ KM analysis of relapse free survival between 
 histologic grade 2 tumors in KJ125 set reclassified as 
 1-like or 3-like based on gene expression profiles.}\label{4B}
@@ -514,12 +518,12 @@ analysis were found in this cluster. Furthermore, there were only 3 luminal A su
  in this dataset. These findings are consistent with observations that luminal A subtype
  tumors are less aggressive than basal-like tumors and serves as a validation of our 
 generated gene list. The TCGA paper does not provide survival data, which would 
-be another interesting validation to be explored in the future.
+be another interesting validation to be explored in the future.\\
 
- \begin{wrapfigure}{r}{0.64\textwidth}
+ \begin{wrapfigure}{r}{1.\textwidth}
 %\begin{figure}
 \centering
-\includegraphics[scale=0.38]{docs/Figure5B}
+\includegraphics[scale=0.80]{docs/Figure5B}
 \caption{ Query of TCGA RNAseq gene expression data with our generated list of genes 
 based on Sotiriou microarray expression profiles.  There is a cluster of increased gene 
 expression (yellow box) containing 108 samples which can be considered grade 3-like.}\label{5B}
@@ -527,7 +531,7 @@ expression (yellow box) containing 108 samples which can be considered grade 3-l
 \end{wrapfigure}
 
 
-\begin{figure}
+ \begin{wrapfigure}{r}{0.64\textwidth}
 \begin{tabular}{| l | l | l | l | }
     \hline
 \textbf{Subtype} & \textbf{Number of} & \textbf{Number of tumors in } & \textbf{Percent}\\  
@@ -543,7 +547,7 @@ Normal & 6 & 2 & 33\% \\ \hline
 \caption{Query of TCGA RNAseq gene expression data with our generated list of genes,
  clustered by PAM50 subtype.  The cluster of increased expression (grade 3-like) has a preponderance 
 of Basal-like tumors and paucity of luminal A tumors.}\label{T2}
-\end{figure}
+\end{wrapfigure}
 
 We further explored the gene list of any functional annotation utilizing resource tools 
 \emph{DAVID} and \emph{KEGG}\cite{Huang1}\cite{Kanehisa1}\cite{Kanehisa2}\cite{Ogata1}.  These analyses found that our gene list 
@@ -557,20 +561,20 @@ be associated with oncologic processes in multiple other organs according to
 queries of the GeneCards web tool (www.genecards.org).  
 
 
- \begin{wrapfigure}{r}{0.64\textwidth}
+ \begin{wrapfigure}{r}{1.\textwidth}
 %\begin{figure}
 \centering
-\includegraphics[scale=0.38]{docs/Figure6B}
+\includegraphics[scale=0.70]{docs/Figure6B}
 \caption{List of differentially upregulated genes in histologic 
 grade 3 tumors is enriched for the pathway of cell cycle regulation.}\label{6B}
 %\end{figure}
 \end{wrapfigure}
 
 
- \begin{wrapfigure}{r}{0.64\textwidth}
+ \begin{wrapfigure}{r}{1.\textwidth}
 %\begin{figure}
 \centering
-\includegraphics[scale=0.38]{docs/Figure7B}
+\includegraphics[scale=0.50]{docs/Figure7B}
 \caption{ List of differentially upregulated genes in 
 histologic grade 3 tumors is enriched for the pathway 
 of progesterone-mediated oocyte maturation.}\label{7B}
@@ -580,7 +584,7 @@ of progesterone-mediated oocyte maturation.}\label{7B}
  \begin{wrapfigure}{r}{0.64\textwidth}
 %\begin{figure}
 \centering
-\includegraphics[scale=0.38]{docs/Figure8B}
+\includegraphics[scale=0.45]{docs/Figure8B}
 \caption{ List of differentially upregulated genes in histologic grade 
 3 tumors is enriched for the pathway of ubiquitin-mediated protein 
 degradation.}\label{8B}
